force-app/main/default/objects/ServiceResource/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant
Created Date: 30th Dec 2020
Purpose: This field will identify service resource belongs to which department</description>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>