force-app/main/default/objects/ServiceResource/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>