force-app/main/default/objects/ServiceResource/fields/Resource_Category__c.field-meta.xml
<CustomField>
    <fullName>Resource_Category__c</fullName>
    <label>Resource Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Courtesy Car</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Jockey</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>